# NotCC

./: .editorconfig  .eslintrc.json  .gitignore  .prettierrc  .protolint.yaml  README.md  cc2Sounds.txt  linearizeCheck.mjs  nccsSpec.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  scriptMetadata.md  testing.mjs  tsconfig.json  webpack.config.js
cli/: package-lock.json  package.json  tsconfig.json
desktopPlayer/: makeDists.mjs  neutralino.config.json  package.json  webDist
electron/: electron-builder.json5  package-lock.json  package.json  tsconfig.json
gamePlayer/: index.html  makeDists.mjs  makeWebDownloads.mjs  neutralino.config.json  package-lock.json  package.json  rollup.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  webpack.config.js
libnotcc/: .gitignore  CMakeLists.txt  README.md  build-native.sh  build-wasm.sh  sane-ld.py  wasm-remove-shared-ld.sh  wasm-sourcemap.py  wasm32.cmake
libnotcc-bind/: .gitignore  package.json  tsconfig.json
libnotcc/include/: c2m.h  logic.h  misc.h
libnotcc/include/accessors/: declare.h  define.h  struct.h
libnotcc/src/: accessors  c2m.c  c2m.h  hash.c  logic.c  logic.h  main-cli.c  misc.c  misc.h  tiles.c  tiles.h  wires.c
libnotcc/wasm-std/include/: assert.h  errno.h  inttypes.h  math.h  stdint.h  stdio.h  stdlib.h  string.h  unistd.h
libnotcc/wasm-std/src/: dlmalloc.c  emmalloc.c  printf.c  printf.h  std.c
logic/: README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json
src/: actor.ts  base.css  cc2ImageFormat.ts  config.ts  (+13 more)
(+225 files in other folders)
